lots of layout improvements, material-ui understanding increased. Need to fix disabled textbox for readability, add nav buttons and request type buttons, export and import buttons, implement fetch of backend and verify that browser can get create update and delete

--- a/covid-app/src/App.css
+++ b/covid-app/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
+nav{
+  height: 10vh;
+  width: 100 vw;
+  margin-bottom: 5%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 50%;
+  margin-left:25%;
+  margin-right: 25%;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer{
+  background-color: aliceblue;
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
 }
